--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
-Werkzeug==0.11.10
+numpy==1.11.2
 redis==2.10.5
+scipy==0.18.1
+Werkzeug==0.11.10
